fix: remove vertical scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,4 +46,5 @@
 
 body {
   margin: 0;
+  overflow: hidden;
 }
